# platform.external.rust.beto-rust

./: .gitignore  Android.bp  METADATA  OWNERS  README.md
common/: Android.bp
nearby/: .dockerignore  Android.bp  Cargo.toml  Dockerfile  README.android  README.md  cargo2android.json  deny.toml  proguard.flags
nearby/.cargo/: config-boringssl.toml
nearby/connections/ukey2/: README.md
nearby/connections/ukey2/ukey2/: Cargo.toml
nearby/connections/ukey2/ukey2/src/: error_handler.rs  lib.rs  proto_adapter.rs  state_machine.rs  tests.rs  (+1 more)
nearby/connections/ukey2/ukey2_c_ffi/: Cargo.toml
nearby/connections/ukey2/ukey2_connections/: Cargo.toml
nearby/connections/ukey2/ukey2_connections/fuzz/: Cargo.toml
nearby/connections/ukey2/ukey2_connections/fuzz/fuzz_targets/: fuzz_connection.rs  fuzz_from_saved_session.rs  fuzz_handshake.rs
nearby/connections/ukey2/ukey2_connections/src/: d2d_connection_context_v1.rs  d2d_handshake_context.rs  java_utils.rs  lib.rs  tests.rs
nearby/connections/ukey2/ukey2_jni/: Cargo.toml
nearby/connections/ukey2/ukey2_proto/: Cargo.toml  build.rs
nearby/crypto/crypto_provider/: Cargo.toml
nearby/crypto/crypto_provider/benches/: hmac_bench.rs
nearby/crypto/crypto_provider/src/: ed25519.rs  elliptic_curve.rs  hkdf.rs  hmac.rs  lib.rs  p256.rs  sha2.rs  x25519.rs
nearby/crypto/crypto_provider/src/aes/: cbc.rs  ctr.rs  gcm_siv.rs  mod.rs
nearby/crypto/crypto_provider/tests/: hkdf_tests.rs  hmac_tests.rs
nearby/crypto/crypto_provider_boringssl/: Cargo.toml
nearby/crypto/crypto_provider_boringssl/src/: aes.rs  hkdf.rs  hmac.rs  lib.rs
nearby/crypto/crypto_provider_default/: Cargo.toml
nearby/crypto/crypto_provider_default/src/: lib.rs
nearby/crypto/crypto_provider_openssl/: Cargo.toml
nearby/crypto/crypto_provider_openssl/src/: aes.rs  ed25519.rs  hkdf_boringssl.rs  hkdf_openssl.rs  hmac_boringssl.rs  hmac_openssl.rs  lib.rs  p256.rs  x25519.rs
nearby/crypto/crypto_provider_openssl/src/aes/: mod.rs
nearby/crypto/crypto_provider_rustcrypto/: Cargo.toml
nearby/crypto/crypto_provider_rustcrypto/src/: ed25519.rs  hkdf_rc.rs  hmac_rc.rs  lib.rs  p256.rs  x25519.rs
nearby/crypto/crypto_provider_rustcrypto/src/aes/: cbc.rs  gcm_siv.rs  mod.rs
nearby/crypto/crypto_provider_stubs/src/: lib.rs
nearby/crypto/crypto_provider_test/src/: ed25519.rs  lib.rs  p256.rs
nearby/crypto/rand_core_05_adapter/src/: lib.rs
nearby/patches/: Android.bp.patch
nearby/presence/: CMakeLists.txt  README.md
nearby/presence/array_view/src/: lib.rs
nearby/presence/ldt/: Cargo.toml
nearby/presence/ldt/benches/: ldt_scan.rs
nearby/presence/ldt/examples/: gen_ldt_xor_pad_test_vectors.rs  ldt_benchmark.rs  ldt_prp.rs
nearby/presence/ldt/src/: lib.rs
nearby/presence/ldt/tests/: ldt_roundtrip.rs  ldt_test_vectors.rs  tests.rs
nearby/presence/ldt_np_adv/: Cargo.toml
nearby/presence/ldt_np_adv/benches/: ldt_adv_scan.rs
nearby/presence/ldt_np_adv/fuzz/: Cargo.toml
nearby/presence/ldt_np_adv/fuzz/fuzz_targets/: ldt_np_decrypt.rs  ldt_np_roundtrip.rs
nearby/presence/ldt_np_adv/src/: lib.rs  np_adv_test_vectors.rs  tests.rs
nearby/presence/ldt_np_adv_ffi/: Cargo.toml  deny.toml
nearby/presence/ldt_np_adv_ffi/include/: np_ldt.h
nearby/presence/ldt_np_adv_ffi/src/: handle_map.rs  lib.rs  no_std.rs  tests.rs
nearby/presence/ldt_np_adv_ffi_fuzz/src/: fuzzer_decrypt_bad_mac.c  fuzzer_decrypt_correct_mac.c
nearby/presence/ldt_np_c_sample/: CMakeLists.txt  main.c
nearby/presence/ldt_np_c_sample/tests/: CMakeLists.txt  benchmarks.cc  np_ffi_tests.cc
nearby/presence/ldt_tbc/: Cargo.toml
nearby/presence/ldt_tbc/src/: lib.rs
nearby/presence/np_adv/: Cargo.toml
nearby/presence/np_adv/benches/: deser_adv.rs
nearby/presence/np_adv/src/: deser_v0_tests.rs  deser_v1_tests.rs  lib.rs
nearby/presence/np_adv/tests/: examples_v1.rs
nearby/presence/np_adv_dynamic/src/: extended.rs
nearby/presence/np_c_ffi/: Cargo.toml
nearby/presence/np_c_ffi/include/c/: np_c_ffi.h
nearby/presence/np_c_ffi/include/cpp/: np_cpp_ffi_functions.h  np_cpp_ffi_types.h
nearby/presence/np_c_ffi/src/: credentials.rs  lib.rs
nearby/presence/np_c_ffi/src/deserialize/: v0.rs  v1.rs
nearby/presence/np_c_ffi/src/serialize/: v0.rs
nearby/presence/np_cpp_ffi/: nearby_protocol.cc
nearby/presence/np_cpp_ffi/include/: nearby_protocol.h
nearby/presence/np_cpp_ffi/sample/: main.cc
nearby/presence/np_cpp_ffi/tests/: CMakeLists.txt  byte_buffer_tests.cc  credential_book_tests.cc  credential_slab_tests.cc  deserialize_v0_tests.cc  deserialize_v1_tests.cc  np_cpp_test.h  v0_private_identity_tests.cc  v0_unencrypted_deserialization_tests.cc  v1_private_identity_tests.cc
nearby/presence/np_ffi_core/: Cargo.toml
nearby/presence/np_ffi_core/src/: common.rs  credentials.rs  deserialize.rs  lib.rs
nearby/presence/np_hkdf/: Cargo.toml
nearby/presence/np_hkdf/benches/: np_hkdf.rs
nearby/presence/np_hkdf/src/: lib.rs  v1_salt.rs
nearby/presence/np_hkdf/tests/: test_vectors.rs
nearby/presence/np_java_ffi/: build.gradle.kts
nearby/presence/np_java_ffi/src/: class.rs
nearby/presence/rand_ext/: Cargo.toml
nearby/presence/rand_ext/src/: lib.rs
nearby/presence/test_helper/src/: lib.rs
nearby/presence/xts_aes/: Cargo.toml
nearby/presence/xts_aes/fuzz/: Cargo.toml
nearby/presence/xts_aes/fuzz/fuzz_targets/: xts_roundtrip.rs
nearby/presence/xts_aes/src/: lib.rs
nearby/presence/xts_aes/tests/: xts_nist_test_vectors.rs  xts_roundtrip.rs  xts_roundtrip_tests.rs
nearby/scripts/: build-fuzzers.sh  build-script.sh  check-everything.sh  prepare-boringssl.sh
nearby/scripts/openssl-patches/: 0001-Apply-Android-changes.patch  0002-Make-openssl-buildable.patch  0003-Add-HmacCtx-wrapper-for-BoringSSL.patch  README.md
nearby/src/: ffi.rs  fuzzers.rs  jni.rs  license.rs  main.rs  ukey2.rs
remoteauth/: Cargo.toml
remoteauth/ctap_protocol/src/: lib.rs
remoteauth/platform/: Cargo.toml
remoteauth/platform/src/: lib.rs
remoteauth/remote_auth_protool/: Cargo.toml
remoteauth/remote_auth_protool/src/: lib.rs  remote_auth_service.rs
(+78 files in other folders)
