[package]
name = "crypto_provider_boringssl"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
crypto_provider = { path = "../crypto_provider", features = ["alloc", "std"] }
crypto_provider_stubs = { path = "../crypto_provider_stubs" }

# Note: before this crate will build you need to run `scripts/prepare-boringssl.sh`
bssl-crypto = {path = "../../../boringssl-build/boringssl/rust/bssl-crypto"}

[dev-dependencies]
crypto_provider = {path = "../crypto_provider", features = ["std", "alloc", "testing"]}
