[package]
name = "crypto_provider_openssl"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
crypto_provider = { path = "../crypto_provider" }
openssl.workspace = true
ouroboros = "0.15.5"
rand.workspace = true
cfg-if.workspace = true

[features]
default = []
boringssl = ["openssl/unstable_boringssl"]

[dev-dependencies]
crypto_provider = { path = "../crypto_provider", features = ["testing"] }
rstest = "0.16.0"
hex-literal.workspace = true
