[package]
name = "crypto_provider_openssl"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
crypto_provider = { path = "../crypto_provider", features = ["alloc", "std"] }
openssl.workspace = true
cfg-if.workspace = true

ouroboros = "0.15.5"

[features]
default = []
boringssl = ["openssl/unstable_boringssl"]

[dev-dependencies]
crypto_provider = { path = "../crypto_provider", features = ["testing"] }
rstest = "0.16.0"
hex-literal.workspace = true
