[package]
name = "ldt_np_adv"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
crypto_provider.workspace = true
array_view.workspace = true
ldt.workspace = true
np_hkdf.workspace = true
xts_aes.workspace = true
ldt_tbc.workspace = true

[dev-dependencies]
crypto_provider_rustcrypto.workspace = true
rand_ext.workspace = true
test_helper.workspace = true

rand.workspace = true
base64.workspace = true
serde_json.workspace = true
hex.workspace = true
anyhow.workspace = true
