[package]
name = "np_c_ffi"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# TODO: We need to make this configurable for this crate and for np_ffi below it.
crypto_provider_default = { path = "../../crypto/crypto_provider_default", features = ["rustcrypto"] }
np_ffi_core = { path = "../np_ffi_core" }

spin = "0.9.8"
libc_alloc = "1.0.4"
panic-abort = "0.3.2"

[build-dependencies]
cbindgen = "0.24.5"

[lib]
# boringssl and bssl-sys are built as a static lib, so we need to as well
crate-type = ["staticlib"]

# build profile optimized for size
[profile.release-min-size]
inherits = "release"
panic = "abort"
codegen-units = 1
lto = true
# z optimizes for size
opt-level = "z"
strip = true