[package]
name = "ukey2_connections"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
ukey2_rs = { path = "../ukey2" }

crypto_provider.workspace = true
rand = { workspace = true, features = ["std", "std_rng"] }
ukey2_proto.workspace = true

bytes = "1.2.1"

[dev-dependencies]
crypto_provider_openssl.workspace = true
crypto_provider_rustcrypto = { workspace = true, features = ["alloc"] }
rstest = "0.16.0"
